rnsc/test_data/rns_integration/error/parser/package_directive/multiple_definitions_recovers.rns
; Tests that parser continues after multiple definitions error and reports subsequent errors
; Expected errors: E-030 (multiple definitions), E-007 (unknown token)

.class public MyClass
.package com.example
.package com.other

     unknown_token ; <- still reported after recovery

.class_end
